# bakta-web-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
.github/workflows/: docker-publish.yml
.kube/: dev-deployment.yaml
argoclient/: argo_client.go  job_config.go  status_handler.go
config/: config.yaml  local-config.yaml
database/: handler.go  handler_integration_test.go  handler_test.go  models.go
endpoints/: job.go  job_integration_test.go  job_test.go  server.go  server_integration_test.go  update.go  update_integration_test.go
gateway/: gateway.go
kube/: dev-deployment.yaml
monitor/: SimpleMonitor.go  simple_monitor.go
objectStorage/: S3ObjectStorageHandler.go  S3ObjectStorageHandler_test.go  s3_object_storage_handler.go  s3_object_storage_handler_test.go
scheduler/: JobConfigurator.go  SimpleScheduler.go  job_configurator.go  job_configurator_test.go  simple_scheduler.go  simple_scheduler_test.go  startJob.go  start_job.go
src/: api_paths.rs  api_structs.rs  bakta_handler.rs  main.rs  s3_handler.rs
src/argo/: client.rs  mod.rs  structs.rs  urls.rs
tests/: docker-compose.test.yml
