[package]
name = "bakta-web-backend"
version = "0.7.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9" # Wait for utopia to be updated to 0.8.x
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11.1"
reqsign = "0.16.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
utoipa = { version = "5.3.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
